Add NQ data module and dataset with tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ dependencies = [
     "pyarrow",
     "pyyaml",
     "jinja2",
+    "torch>=2.2.0",
+    "pytorch-lightning>=2.2.0",
 ]
 
 [project.optional-dependencies]
