--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "jinja2",
     "torch>=2.2.0",
     "pytorch-lightning>=2.2.0",
+    "pydantic>=2.0",
 ]
 
 [project.optional-dependencies]
@@ -37,7 +38,7 @@ pythonpath = "src"
 
 [tool.black]
 line-length = 88
-target-version = "py310"
+target-version = ["py310"]
 
 [tool.isort]
 profile = "black"
@@ -49,3 +50,4 @@ target-version = "py310"
 [tool.mypy]
 python_version = "3.10"
 check_untyped_defs = true
+ignore_missing_imports = true
